--- a/style.css
+++ b/style.css
@@ -82,6 +82,30 @@ hr {
   text-align: center;
 }
 
+.width-10 {
+  width: 10%;
+}
+
+.width-15 {
+  width: 15%;
+}
+
+.width-20 {
+  width: 20%;
+}
+
+.width-70 {
+  width: 70%;
+}
+
+.width-75 {
+  width: 75%;
+}
+
+.width-80 {
+  width: 80%;
+}
+
 /* .nav {
   background-color: #284E7A;
   color: white;
@@ -115,8 +139,17 @@ hr {
   content: " | ";
 }
 
-.nav ul li:hover {
-  background-color: cadetblue;
+.nav ul li a:hover {
+  text-decoration: underline;
+  color: #CCC !important;
+}
+
+.bg-cms {
+  background-color: #1f9bde;
+}
+
+.bg-cms-light {
+  background-color: #8bc7ea;
 }
 
 /*
@@ -124,14 +157,23 @@ hr {
   color: black;
 } */
 #navbarResponsive {
-  background-color: #1f9bde;
   height: 85px;
   transform: translateY(-0.5em);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
 
-#solicitarVisita{
+#solicitarVisita {
+  transform: translateY(-0.5em);
+  height: 85px;
+  border-bottom-left-radius: 20px;
+  position: relative;
+}
+
+#solicitarVisita p{
+  position: absolute;
+  bottom: 0;
+  right: 10px;
 }
 
 .image-area {
