--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   padding: 0px;
   margin: 0px;
   line-height: 1.5;
+  background-color: #D2D2D2;
 }
 
 a {
@@ -106,27 +107,6 @@ hr {
   width: 80%;
 }
 
-/* .nav {
-  background-color: #284E7A;
-  color: white;
-  width: 100%;
-}
-
-.nav a {
-  text-decoration: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav ul {
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none;
-}
-
-.nav ul div {
-  width: 100%;
-}*/
 .nav ul li {
   text-align: right;
   list-style-type: none;
@@ -152,28 +132,76 @@ hr {
   background-color: #8bc7ea;
 }
 
-/*
-.nav ul li:active {
-  color: black;
-} */
+#mainNav {
+  background-color: #FFF;
+  height: 60px !important;
+  padding-bottom: 0px !important;
+  padding-right: 0 !important;
+  position: relative;
+}
+
+#mainNav img {
+  height: 42px;
+  width: 102px;
+}
+
 #navbarResponsive {
-  height: 85px;
+  min-height: 60px;
   transform: translateY(-0.5em);
+  border-top-left-radius: 0;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
 
 #solicitarVisita {
   transform: translateY(-0.5em);
-  height: 85px;
+  height: 60px;
   border-bottom-left-radius: 20px;
   position: relative;
 }
 
-#solicitarVisita p{
+#solicitarVisita p {
   position: absolute;
-  bottom: 0;
-  right: 10px;
+  bottom: -10px;
+  right: 2px;
+}
+
+#secondaryNav {
+  height: 90px;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+#secondaryNav .centered {
+  display: flex;
+  flex-direction: row;
+  height: 80px;
+  margin: 0 10px !important;
+  padding: 0 !important;
+  width: 95%;
+}
+
+#secondaryNav .centered div {
+  width: 160px;
+  height: 80px;
+  padding-top: 10px;
+  text-align: center;
+  transition: all .25s;
+}
+
+#secondaryNav .centered div img {
+  height: 40px;
+  width: 40px;
+}
+
+#secondaryNav .centered div p {
+  color: #1f9bde;
+}
+
+#secondaryNav .centered div:hover {
+  z-index: 999;
+  background-color: white;
+  box-shadow: 0 0 11px rgba(33, 33, 33, .5);
 }
 
 .image-area {
@@ -239,152 +267,31 @@ h3.title {
   text-align: center;
 }
 
-/*-------- DROPDOWN MENU --------*/
-/* Dropdown Button */
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-login-button {
-  border-top: 1px solid rgba(0, 0, 0, 0);
-  border-right: 1px solid rgba(0, 0, 0, 0);
-  border-left: 1px solid rgba(0, 0, 0, 0);
-  padding: 0 3px;
-  max-width: 254px;
-  cursor: pointer;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-login-form {
-  display: none;
-  text-align: left;
+/* #menuButton{
   position: absolute;
-  background-color: cadetblue;
-  min-width: 260px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-/* Links inside the dropdown */
-.dropdown-login-form form {
-  color: black;
-  padding: 12px 10px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
-  text-decoration: none;
-  display: block;
-  text-align: right;
-}
-
-.dropdown-login-form .center {
-  text-align: center;
-  width: 100%;
-}
-
-.dropdown-login-form .right {
-  text-align: right;
-  width: 100%;
-}
-
-.dropdown-login-form form p {
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-  text-align: left;
-}
-
-.dropdown-login-form form input {
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.dropdown-login-form form input[type="text"], input[type="password"] {
-  border: none;
-  border-bottom: 1px solid #fff;
-  background: transparent;
-  outline: none;
-  height: 20px;
-  color: white;
-  margin-left: 2px;
-}
-
-.dropdown-login-form form input[type="submit"] {
-  border: none;
-  outline: none;
-  height: 20px;
-  background: #284E7A;
-  color: black;
-  font-size: 1em;
-  border-radius: 30px;
-  padding: 8px 0;
-  width: 66%;
-}
-
-.dropdown-login-form form input[type="submit"]:hover {
-  cursor: pointer;
-  background: #284EDA;
-}
-
-.dropdown-login-form a {
-  text-decoration: none;
-  font-size: 0.6em;
-  line-height: 20px;
-  color: lightgrey;
-  margin: auto 0 auto auto;
-}
-
-.dropdown-login-form a:hover {
-  color: white;
-}
-
-/* Class selectors to give a better feeling of interaction */
-.show {
-  display: block;
-}
-
-/*-------- DROPDOWN MENU --------*/
-/* and (orientation: portrait) */
-@media screen and (min-width: 900px) {
+  top: 0px;
+  right: 28px;
+} */
+@media (max-width: 768px) {
   #mainTitle {
     font-size: 3em;
+  }
+
+  #containerDiv {
+    margin-right: 10px !important;
   }
 
   .intro-text {
     font-size: 1.4em;
   }
 
-  /* .nav {
-    font-size: 0px;
-    position: fixed;
-    top: 0;
-    left: 0;
+  #navbarResponsive {
+    width: 50%;
+    min-height: 0;
+    border-top-left-radius: 20px;
+    transform: translateY(-0.15em);
   }
 
-  .nav ul {
-    text-align: right;
-  }
-
-  .nav ul div {
-    width: auto;
-  }
-
-  .nav ul li {
-    display: inline-block;
-    font-size: 1.2rem;
-    border-bottom: 0px;
-    border-left: 1px solid black;
-  }
-
-  .nav ul li:hover {
-    background-color: cadetblue;
-    padding: 8px;
-    font-size: 1.2rem;
-  } */
   footer ul {
     margin-bottom: 25px;
     display: flex;
@@ -393,41 +300,5 @@ h3.title {
 
   footer ul li a {
     font-size: 36px;
-  }
-
-  .single-service {
-    width: 50%;
-    float: left;
-  }
-
-  .single-service img {
-    width: 80%;
-  }
-
-  .single-service p {
-    font-size: 1em;
-  }
-
-  h3.title {
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-
-  #twoCols {
-    flex-direction: column;
-  }
-
-  .about-img img {
-    width: 200px;
-  }
-
-  .about-bio {
-    font-size: 1.4em;
-    width: 65%;
-    max-width: 800px;
-    line-height: 2;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align: justify;
   }
 }
