--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ hr {
   background-color: #8bc7ea;
 }
 
+.br-5{
+  border-radius: 5px;
+}
+
 #mainNav {
   background-color: #FFF;
   height: 4em !important;
@@ -183,11 +187,11 @@ hr {
   flex-direction: row;
   height: 80px;
   margin: 0px auto !important;
-  width: 80%;
+  width: 10%;
 }
 
 #secondaryNav .centered div {
-  width: 160px;
+  min-width: 140px;
   height: 80px;
   padding-top: 10px;
   text-align: center;
@@ -211,6 +215,26 @@ hr {
 
 #secondaryNav .centered div p {
   color: #1f9bde;
+}
+
+#secondaryNav .centered button{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+#secondaryNav .centered button:active{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
 #secondaryNav .centered div:hover {
