--- a/src/style.css
+++ b/src/style.css
@@ -285,18 +285,19 @@ hr {
   bottom: 0;
   height: 0;
   transform: scaleY(0);
-  transition: transform 0.3s ease-in-out, height 0.3s ease-in-out 0.15s;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out, transform 0s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s;
 }
 
 #body-wrapper #block-collaboration-cliniques #collaboration-cliniques-images img {
   margin: 1em 0;
 }
 
-
 #body-wrapper #block-collaboration-cliniques:hover #collaboration-cliniques-images {
   height: 15.7em;
   transform: scaleY(1);
-  transition: height 0.3s ease-in-out, transform 0.3s ease-in-out 0.15s;
+  opacity: 1;
+  transition: height 0.2s ease-in-out, transform 0s ease-in-out, opacity 0.2s ease-in-out 0.2s;
 }
 
 footer {
